# crystal-rust-client

app/: Cargo.toml
app/src/: main.rs
rust-client/: Cargo.toml
rust-client/src/: lib.rs
rust-client/src/client/: client.rs  mod.rs  types.rs
