[package]
name = "rust_client"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.147"
serde_with = "3.16.1"
validator = { version = "0.20.0", features = ["derive"] }
anyhow = "1.0.100"
oas3-gen-support = "0.23.5"
regex = "1.12.2"
